# ai_conversation_memory_visualizer

./: .gitignore  README.md  package-lock.json  pyproject.toml
ai_conversation_memory_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: domain_stopwords.txt
fixtures/: chatgpt_export_sample.json
scripts/: run_conversation_clustering.py
src/: cli.py  env_loader.py  models.py  pipeline.py
src/analysis/: __init__.py  domain.py  text.py
src/api/: main.py
src/clustering/: keywords.py  semantic_labels.py  service.py
src/conversation_pipeline/: __init__.py  clustering.py  embeddings.py  rollup.py  service.py
src/detection/: source_detection.py
src/embeddings/: providers.py  service.py
src/labeling/: __init__.py  evidence.py  evidence_packet.py  gpt_labeler.py  service.py
src/metrics/: drift_service.py  modes_service.py  service.py  specialization_service.py
src/modes/: __init__.py  scoring.py  taxonomy.py
src/normalize/: normalizer.py
src/parsers/: base.py  chatgpt_parser.py  claude_parser.py  (+2 more)
tests/: test_analysis_text.py  test_chatgpt_parser.py  test_claude_import_integration.py  test_claude_parser.py  test_cluster_keywording.py  test_clustering.py  test_conv_clusters_api.py  test_conversation_semantic_pipeline.py  test_drift.py  test_gemini_import_integration.py  test_gemini_parser.py  test_metrics_insight.py  test_modes.py  test_normalizer.py  test_profile.py  test_redaction.py  test_report_generator.py  test_semantic_labeling.py  test_semantic_labels.py  test_source_detection.py  test_specialization.py  test_subclustering.py
(+26 files in other folders)
